<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow3"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name_small"
        app:titleTextColor="@android:color/background_dark">

        <ImageButton
            android:id="@+id/wallet"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:background="@color/yellow3"
            android:onClick="walletClicked"
            android:scaleType="fitXY"
            android:textSize="18sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/wallet"
            tools:layout_editor_absoluteX="309dp"
            tools:layout_editor_absoluteY="28dp" />
    </androidx.appcompat.widget.Toolbar>


    <com.eazygamers.battlegroundspaidroom_earnmoneybyplayingcustomroom.MyViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomTabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar" />

    <com.google.android.material.tabs.TabLayout

        android:id="@+id/bottomTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorColor="@color/whitish"
        app:tabSelectedTextColor="@color/blue1"
        app:tabTextColor="#000000">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_career" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/homeTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
