<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".PlayFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/newsBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@color/silver"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/freefire_button">



                <TextView
                    android:id="@+id/tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:fontFamily="@font/neuropolitical"
                    android:text="@string/news_stuffs"
                    android:textAlignment="center"
                    android:textColor="@color/whitish"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/fbPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Click Here To Connect With Our FB Page &amp; Watch Live Steam" />

                <Button
                    android:id="@+id/fbGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Click Here To Join Our Messenger Support Team &amp; my group on Messenger" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/freefire_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@color/lightBlue"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubgm_button">

                <TextView
                    android:id="@+id/freefire_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="Loading"
                    android:textAlignment="center"
                    android:textColor="@color/yellow1"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/freefire_logo"
                    app:layout_constraintTop_toBottomOf="@+id/freefire_heading" />

                <ImageView
                    android:id="@+id/freefire_logo"
                    android:layout_width="150dp"

                    android:layout_height="70dp"
                    android:layout_margin="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/freefire_logo"
                    android:scaleType="fitXY"
                    android:src="@drawable/freefire_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/freefire_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="204dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/free_fire"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.383"
                    app:layout_constraintStart_toEndOf="@+id/freefire_logo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/pubgm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/freefire_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="N">

                <ImageView
                    android:id="@+id/pubg_logo"
                    android:layout_width="150dp"

                    android:layout_height="67dp"
                    android:layout_margin="2dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/pubg_mobile"
                    android:scaleType="fitXY"
                    android:src="@drawable/pubgm_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/pubg_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="Loading"
                    android:textAlignment="center"
                    android:textColor="@color/yellow1"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pubg_logo"
                    app:layout_constraintTop_toBottomOf="@+id/pubg_heading" />

                <TextView
                    android:id="@+id/pubg_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/pubg_mobile"
                    android:textAlignment="center"
                    android:textColor="@color/whitish"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pubg_logo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
